--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -19,10 +19,9 @@ jobs:
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
           git clone git@github.com:ixchow/kit-libs-win
           git clone git@github.com:eigenteam/eigen-git-mirror eigen
-          git submodule init
-          git submodule update
+          git clone https://github.com/ixchow/kit
           python .github/workflows/download-jam.py
-          jam -q
+          set JAM_TOOLSET=VISUALC && jam -q
         env:
           TAG_NAME: ${{ github.event.release.tag_name }}
       - name: Upload Result
@@ -45,8 +44,7 @@ jobs:
         shell: bash
         run: |
           sudo apt install ftjam libglm-dev libpng-dev libsdl2-dev libeigen3-dev
-          git submodule init
-          git submodule update
+          git clone https://github.com/ixchow/kit
           jam -q
         env:
           TAG_NAME: ${{ github.event.release.tag_name }}
@@ -70,8 +68,7 @@ jobs:
         shell: bash
         run: |
           brew install ftjam sdl2 glm eigen libpng
-          git submodule init
-          git submodule update
+          git clone https://github.com/ixchow/kit
           jam -q
         env:
           TAG_NAME: ${{ github.event.release.tag_name }}
