--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -23,7 +23,7 @@ jobs:
           git clone git@github.com:eigenteam/eigen-git-mirror eigen
           git clone https://github.com/ixchow/kit
           python .github/workflows/download-jam.py
-          work\jam.exe JAM_TOOLSET=VISUALC -q
+          "work\jam.exe" JAM_TOOLSET=VISUALC -q
           dir/w
      - name: Package
         shell: cmd
