bisect for syntax error detection, step 6

--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Build Code A
         shell: cmd
         run: |
-          dir/w
+          echo "hello"
      - name: Build Code B
         env:
           TAG_NAME: ${{ github.event.release.tag_name }}
