was it a list indenting problem all along?

--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -12,23 +12,19 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
-      - name: Build Code A
+      - name: Build Cod
         shell: cmd
         run: |
-          echo "hello"
-     - name: Build Code B
-        env:
-          TAG_NAME: ${{ github.event.release.tag_name }}
-        shell: cmd
-        run: |
+          dir/w
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
           git clone git@github.com:ixchow/kit-libs-win
           git clone git@github.com:eigenteam/eigen-git-mirror eigen
           git clone https://github.com/ixchow/kit
           python .github/workflows/download-jam.py
           "work\jam.exe" JAM_TOOLSET=VISUALC -q
-          dir/w
-     - name: Package
+        env:
+          TAG_NAME: ${{ github.event.release.tag_name }}
+      - name: Package
         shell: cmd
         run: |
           rename dist "autoknit-windows-%TAG_NAME%"
