--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -12,13 +12,13 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
-      - name: Build Cod
+      - name: Build Code
         shell: cmd
         run: |
           dir/w
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-          git clone git@github.com:ixchow/kit-libs-win
-          git clone git@github.com:eigenteam/eigen-git-mirror eigen
+          git clone https://github.com/ixchow/kit-libs-win
+          git clone https://github.com/eigenteam/eigen-git-mirror eigen
           git clone https://github.com/ixchow/kit
           python .github/workflows/download-jam.py
           "work\jam.exe" JAM_TOOLSET=VISUALC -q
@@ -59,8 +59,8 @@ jobs:
       - name: Package
         shell: bash
         run: |
-          mv dist "autoknit-linux-$(TAG_NAME)"
-          tar cfz "autoknit-linux-$(TAG_NAME).tar.gz" "autoknit-linux-$(TAG_NAME).tar.gz"
+          mv dist "autoknit-linux-$TAG_NAME"
+          tar cfz "autoknit-linux-$TAG_NAME"".tar.gz" "autoknit-linux-$TAG_NAME"".tar.gz"
           ls
         env:
           TAG_NAME: ${{ github.event.release.tag_name }}
@@ -89,8 +89,8 @@ jobs:
       - name: Package
         shell: bash
         run: |
-          mv dist "autoknit-macos-$(TAG_NAME)"
-          tar cfz "autoknit-macos-$(TAG_NAME).tar.gz" "autoknit-macos-$(TAG_NAME).tar.gz"
+          mv dist "autoknit-macos-$TAG_NAME"
+          tar cfz "autoknit-macos-$TAG_NAME"".tar.gz" "autoknit-macos-$TAG_NAME"".tar.gz"
           ls
         env:
           TAG_NAME: ${{ github.event.release.tag_name }}
