--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -21,6 +21,7 @@ jobs:
           git clone https://github.com/eigenteam/eigen-git-mirror eigen
           git clone https://github.com/ixchow/kit
           python .github/workflows/download-jam.py
+		  mkdir dist
           "work\jam.exe" JAM_TOOLSET=VISUALC -q
         env:
           TAG_NAME: ${{ github.event.release.tag_name }}
@@ -60,7 +61,7 @@ jobs:
         shell: bash
         run: |
           mv dist "autoknit-linux-$TAG_NAME"
-          tar cfz "autoknit-linux-$TAG_NAME"".tar.gz" "autoknit-linux-$TAG_NAME"".tar.gz"
+          tar cfz "autoknit-linux-$TAG_NAME"".tar.gz" "autoknit-linux-$TAG_NAME"
           ls
         env:
           TAG_NAME: ${{ github.event.release.tag_name }}
@@ -90,7 +91,7 @@ jobs:
         shell: bash
         run: |
           mv dist "autoknit-macos-$TAG_NAME"
-          tar cfz "autoknit-macos-$TAG_NAME"".tar.gz" "autoknit-macos-$TAG_NAME"".tar.gz"
+          tar cfz "autoknit-macos-$TAG_NAME"".tar.gz" "autoknit-macos-$TAG_NAME"
           ls
         env:
           TAG_NAME: ${{ github.event.release.tag_name }}
