--- a/.github/workflows/build-workflow.yml
+++ b/.github/workflows/build-workflow.yml
@@ -55,6 +55,7 @@ jobs:
         run: |
           sudo apt install ftjam libglm-dev libpng-dev libsdl2-dev libeigen3-dev
           git clone https://github.com/ixchow/kit
+          mkdir dist
           jam -j3 -q
         env:
           TAG_NAME: ${{ github.event.release.tag_name }}
@@ -89,6 +90,7 @@ jobs:
           cp README.md dist
           brew install ftjam sdl2 glm eigen libpng
           git clone https://github.com/ixchow/kit
+          mkdir dist
           jam -j3 -q
       - name: Package
         shell: bash
